Fixed wrapping of cards and alignment of main menu header

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
 
 .container {
   height: 100%;
+  width: 100%;
   display: flex;
   margin: 0 auto;
 }
@@ -85,4 +86,5 @@ h1 {
   font-family: 'Lobster', cursive;
   font-size: 3em;
   color: white;
+  text-align: center;
 }
